# options-aji-backend

./: .claude.json  .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT_BASELINE.md  Dockerfile  RELEASE_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.example.toml  setup.py
app/: __init__.py  config.py  logging_setup.py  main.py
app/agents/: user_agent.py  user_agent_helpers.py
app/analytics/: __init__.py  cboe_equity_pc.py  earnings_depth.py  gex_compute.py  gex_history.py  iv_metrics.py  market_fusion.py  market_hours.py  options_chain_analysis.py  options_pricing.py  unusual_v2.py
app/api/: billing_access.py  deps.py  deps_auth.py
app/api/routes/: agent.py  alerts.py  analyst.py  auth.py  billing.py  brief.py  compat.py  congress.py  dark_pool.py  discord_backfill.py  divergence.py  earnings_symbol.py  earnings_view.py  etf.py  events.py  feed_ai.py  feed_unified.py  fusion.py  health.py  insider.py  integration_status.py  macro.py  market_dashboard.py  market_overview.py  messages.py  news.py  options.py  portfolio.py  profile.py  scanner.py  signals_feed.py  social.py  stock_detail.py  stock_enhanced.py  stock_sentiment.py  (+2 more)
app/clients/: fmp_client.py  massive_client.py
app/db/: bootstrap.py  models.py  models_user.py  session.py
app/events/: broadcaster.py
app/ingest/: discord_bot.py  discord_history_rest.py  feed_enrichment.py  intel_macro.py  message_store.py  tickers.py
app/schemas/: common.py
app/services/: auth_rate_limit.py  cache_service.py  jwt_tokens.py  kol_handles.py  passwords.py  resonance_feed.py  social_sentiment.py
app/sync/: scheduler.py
app/tools/: lc_openbb.py  openbb_tools.py
data/: messages.db
docs/: DATA_SOURCES_MASSIVE_FMP.md
scripts/: backend.sh  cleanup_old_messages.py  deploy.sh  discord_backfill_recent.py  discord_send_test_message.py  preflight_check.sh  server-setup.sh  social_ingest_once.py
tests/: conftest.py  test_agent_sse.py  test_auth_flow.py  test_gex_compute.py  test_options_analytics.py  test_profile_scanner_templates.py  test_social_kol_config.py
(+4 files in other folders)
