[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "options-aji-backend"
version = "0.1.0"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy>=2.0.30",
  "discord.py>=2.4.0",
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0",
  "httpx>=0.27.0",
  "yfinance>=0.2.40",
  "stripe>=11.0.0",
  "pandas>=2.1.0",
  "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pyright]
pythonVersion = "3.11"
